--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,7 @@ http {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             add_header Cache-Contorl "no-cache, max-age=0";
+            try_files $uri $uri/ /index.html;
         }
 
         location ~ \.(js|css|png|jpg|jpeg|svg)$ {
